# aquageo-module

./: .env.example  .gitignore  CLAUDE.md  DATA_NOTES.md  ISSUES.md  LICENSE  Makefile  README.md  STATUS_OVERNIGHT.md  WORKFLOW.md  context.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/assessment/: admin.py  apps.py  models.py  services.py
backend/catalog/: admin.py  apps.py  filters.py  import_utils.py  models.py  org_import.py  permissions.py  regions.py  serializers.py  stats_service.py  stats_views.py  urls.py  views.py
backend/common/: admin.py  audit.py  models.py  pagination.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/data/: export.geojson  qazsu_hydroposts_334.csv
backend/ingestion/: admin.py  apps.py  extract.py  llm.py  matching.py  models.py  serializers.py  urls.py  views.py
backend/monitoring/: admin.py  apps.py  models.py  risk.py  serializers.py  services.py  tasks.py
backend/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/reports/: apps.py  services.py  urls.py  views.py
backend/tests/: test_accounts.py  test_assessment.py  test_catalog.py  test_hydropost_readings.py  test_import_data.py  test_inspection_interval.py  test_llm.py  test_map_filters.py  test_object_card.py  test_openapi_schema.py  test_org_import.py  test_parse_job.py  test_reports.py  test_risk_detectors.py  test_stats.py  (+5 more)
(+105 files in other folders)
