[project]
name = "aquageo-backend"
version = "0.1.0"
description = "AquaGeo — backend (Django + DRF + GeoDjango)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
# DJ001: allow null on text fields where pragmatic; relax later if needed.
ignore = ["B008"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"
